# preclinical

./: .dockerignore  .env.example  .gitignore  .paper-data-collection.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  TriageBenchCases.csv  TriageBench_Analysis_Implementation_Plan.md  docker-compose.prod.yml  docker-compose.yml  multithreaded.rs  package.json
.browseruse-data/storage-states/: browserbase-contexts.json
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  (+2 more)
.husky/: pre-commit
cli/: README.md  pyproject.toml
cli/src/preclinical/: __init__.py  client.py  config.py  exceptions.py  models.py
cli/src/preclinical/cli/: __init__.py  agents.py  app.py  formatters.py  results.py  runs.py  scenarios.py
cli/tests/: conftest.py  test_cli.py  test_client.py
deploy/: truefoundry-single-machine.md
docs/: agentic-scenario-creation-design.md  index.html
docs-site/: mkdocs.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
scripts/: audit-benchmark-results.mjs  generate-seed.mjs  generate_benchmark_page_data.py  merge-rerun-csv.mjs  run-benchmark.sh  run-browseruse-local.sh  skill-output-to-csv.mjs  slow-run.sh  test-patient-agent.sh
server/: package-lock.json  package.json  schema.sql  seed.sql  vitest.config.ts
target-agents/: README.md  registry.json
tests/: README.md  package-lock.json  package.json  vitest.config.ts  vitest.e2e.config.ts
(+332 files in other folders)
