[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "preclinical"
version = "0.3.1"
description = "CLI and SDK for the Preclinical healthcare AI agent testing platform"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["healthcare", "ai", "testing", "agents", "adversarial", "grading", "clinical"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "pydantic>=2.0",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/Mentat-Lab/preclinical"
Repository = "https://github.com/Mentat-Lab/preclinical"
Issues = "https://github.com/Mentat-Lab/preclinical/issues"

[project.scripts]
preclinical = "preclinical.cli.app:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["preclinical*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
